adicionando lista de urls permitidas para cross origin